docs: update package references to scoped name

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -14,7 +14,7 @@ startCommand:
   commandFunction: |
     (config) => ({
       command: 'npx',
-      args: ['-y', 'freeagent-mcp'],
+      args: ['-y', '@samaxbytez/freeagent-mcp'],
       env: {
         FREEAGENT_ACCESS_TOKEN: config.freeagentAccessToken,
         ...(config.freeagentBaseUrl ? { FREEAGENT_BASE_URL: config.freeagentBaseUrl } : {})
