--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@samaxbytez/freeagent-mcp",
+  "name": "freeagent-mcp-server",
   "version": "1.0.0",
   "description": "MCP server for the FreeAgent API",
   "type": "module",
