feat: add built-in OAuth2 flow with automatic token refresh
Users now only need FREEAGENT_CLIENT_ID and FREEAGENT_CLIENT_SECRET
(from Developer Dashboard) instead of manually obtaining access tokens.

- `npx freeagent-mcp-server auth` opens browser for one-time OAuth flow
- Tokens stored at ~/.freeagent-mcp/tokens.json with auto-refresh
- Client accepts async token provider for lazy token resolution
- FREEAGENT_ACCESS_TOKEN still works as legacy fallback

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-FREEAGENT_ACCESS_TOKEN=your_access_token_here
-FREEAGENT_BASE_URL=https://api.sandbox.freeagent.com/v2
+# FreeAgent OAuth2 credentials (from Developer Dashboard)
+FREEAGENT_CLIENT_ID=your_client_id_here
+FREEAGENT_CLIENT_SECRET=your_client_secret_here
+
+# Set to "false" for production FreeAgent accounts
+FREEAGENT_SANDBOX=true
+
+# Legacy: provide a token directly (skips OAuth flow)
+# FREEAGENT_ACCESS_TOKEN=your_access_token_here
