feat: default to production API and add auth paste fallback
Switch default from sandbox to production - users opt into sandbox with
FREEAGENT_SANDBOX=true instead of opting out with false.

Add manual URL paste fallback to the OAuth auth flow. If the localhost
redirect doesn't work (port busy, firewall, etc.), users can paste the
full redirect URL from their browser. Both modes run in parallel -
whichever completes first wins.

Update docs with Cowork support and improved auth instructions.

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -14,7 +14,7 @@ startCommand:
         description: Your FreeAgent OAuth2 client secret from the Developer Dashboard
       freeagentSandbox:
         type: string
-        description: Set to "false" for production accounts (defaults to sandbox)
+        description: Set to "true" to use sandbox instead of production (defaults to production)
       freeagentAccessToken:
         type: string
         description: Legacy - direct OAuth2 access token (skips stored token flow)
