--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 FREEAGENT_CLIENT_ID=your_client_id_here
 FREEAGENT_CLIENT_SECRET=your_client_secret_here
 
-# Set to "false" for production FreeAgent accounts
-FREEAGENT_SANDBOX=true
+# Set to "true" to use the FreeAgent sandbox instead of production
+# FREEAGENT_SANDBOX=true
 
 # Legacy: provide a token directly (skips OAuth flow)
 # FREEAGENT_ACCESS_TOKEN=your_access_token_here
